Change to library name in composer.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "toonday/numbergenerator",
+    "name": "toonday/pingenerator",
     "description": "Pin number generator.",
     "type": "library",
     "require": {
