--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Pin number generator.",
     "type": "library",
     "require": {
-        "php": ">=7.0.0"
+        "php": ">=5.6.4"
     },
     "license": "MIT",
     "authors": [
@@ -17,5 +17,16 @@
             "NumberGenerator\\" : "src/NumberGenerator"
         }
     },
-    "minimum-stability": "stable"
+    "autoload-dev" : {
+        "psr-4" : {
+            "Tests\\" : "tests"
+        }
+    },
+    "minimum-stability": "stable",
+    "require-dev": {
+        "phpunit/phpunit": "^6.3"
+    },
+    "scripts": {
+        "tests": "vendor/bin/phpunit"
+    }
 }
