--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
-vendor`
+vendor/*
+
+# Required folders are not ignored.
+!src
+!tests
+
+# Required files are not ignored (include metafiles).
+!*.xml
+!*.json
+!*.lock
+!.editorconfig
+
+
+
+
