--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ php:
   - '7.1'
   - '7.2'
 
-install: composer install
+install: composer install --prefer-source --dev --no-suggest
 
 script: composer run tests
