--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,6 @@ php:
 install: composer install --prefer-source --dev --no-suggest
 
 script: composer run tests
+
+after_success: 
+  - bash <(curl -s https://codecov.io/bash) -t a3a391f9-6223-4b92-92ec-b3bd7ce0593e
