--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     },
     "minimum-stability": "stable",
     "require-dev": {
-        "phpunit/phpunit": "5.7.*"
+        "phpunit/phpunit": "^6.5"
     },
     "scripts": {
         "tests": "vendor/bin/phpunit"
