--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ php:
   - '7.1'
   - '7.2'
 
-install: composer install --prefer-source --dev --no-suggest
+install: composer install --dev --no-suggest
 
 script: composer run tests
 
