--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "library",
     "keywords": [ "library", "PinGenerator." ],
     "require": {
-        "php": "^5.6|^7.0"
+        "php": "^5.6|^7.0",
+        "phpunit/phpunit": "^7.0"
     },
     "license": "MIT",
     "authors": [
@@ -25,7 +26,6 @@
     },
     "minimum-stability": "stable",
     "require-dev": {
-        "phpunit/phpunit": "^6.5"
     },
     "scripts": {
         "tests": "vendor/bin/phpunit"
