--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "library",
     "keywords": [ "library", "PinGenerator." ],
     "require": {
-        "php": "^5.6|^7.0",
+        "php": "^7.1",
         "phpunit/phpunit": "^7.0"
     },
     "license": "MIT",
