--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     ],
     "autoload" : {
         "psr-4" : {
-            "NumberGenerator\\" : "src/NumberGenerator"
+            "Toonday\\NumberGenerator\\" : "src/NumberGenerator"
         }
     },
     "autoload-dev" : {
